# RSSAnimeTool

./: README.md  config.ini  pyproject.toml  requirments.txt
src/: basis.py  crawler.py  dao.py  database.py  downloader.py  rss.py  run.py  service.py  test.py  update.py  version.py
